# infomaniak

./: .gitignore  eval_model.py  finetune_lora.py  gen_data_receipts.py  main.py  prompt_v0.txt  pyproject.toml  receipt_dataset.jsonl  receipt_dataset_1000.jsonl  receipt_dataset_1000_test.jsonl  receipt_dataset_1000_train.jsonl  receipt_visualization.html  score.py  serve.sh  setup.sh  split_dataset.py  viz_data.py
eval/: Qwen_Qwen3-4B-Instruct-2507_20260214_213610.html  Qwen_Qwen3-4B-Instruct-2507_20260214_213610.json  Qwen_Qwen3-4B-Instruct-2507_20260214_220155.html  Qwen_Qwen3-4B-Instruct-2507_20260214_220155.json  Qwen_Qwen3-4B-Instruct-2507_20260214_221141.html  Qwen_Qwen3-4B-Instruct-2507_20260214_221141.json  Qwen_Qwen3-4B-Instruct-2507_20260214_224117.html  Qwen_Qwen3-4B-Instruct-2507_20260214_224117.json  Qwen_Qwen3-4B-Instruct-2507_20260215_192850.html  Qwen_Qwen3-4B-Instruct-2507_20260215_192850.json  Qwen_Qwen3-4B-Instruct-2507_base_20260215_213211.html  Qwen_Qwen3-4B-Instruct-2507_base_20260215_213211.json  Qwen_Qwen3-4B-Instruct-2507_lora_receipt-lora-qwen3-4b_20260215_212636.html  Qwen_Qwen3-4B-Instruct-2507_lora_receipt-lora-qwen3-4b_20260215_212636.json
