[project]
name = "infomaniak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "openai>=2.20.0",
    "peft>=0.18.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.6",
    "trl>=0.28.0",
    "vllm>=0.15.1",
]
